do all ethinic and fix dark mode color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,11 +29,11 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
-
+/* from here set dark mode */
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: white;
+    /* --foreground: #ededed; */
   }
 }
 
@@ -42,6 +42,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 
 @layer utilities {
       /* Hide scrollbar for Chrome, Safari and Opera */
